--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "express-session": "^1.17.0",
     "http-errors": "^1.7.3",
     "mongoose": "^5.7.11",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
