--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "http-errors": "^1.7.3",
+    "mongodb": "^3.4.1",
     "mongoose": "^5.7.11",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
